Saved results table subheading

--- a/psite/pfind/templates/pfind/pfind_form.html
+++ b/psite/pfind/templates/pfind/pfind_form.html
@@ -184,7 +184,7 @@ tr:nth-child(even) {
     <h2> Saved Results: {{acgt_str}} </h2>
 
     {% if tres_len > 0 %}
-    <p>{{tres_len}} saved results for "{{acgt_str}}" from all users.</p>
+    <p> Saved results ({{tres_len}}) for "{{acgt_str}}" from all users.</p>
     <table>
       <tr>
           <th>NCBI Name</a></th>
