bug fixes: list link; max_find=0 means unlimited again; removed last support for raw query

--- a/psite/pfind/templates/pfind/list_view.html
+++ b/psite/pfind/templates/pfind/list_view.html
@@ -23,7 +23,9 @@
 {% if protein_list %}
     <ul>
     {% for protein in protein_list %}
-        <li><a href="/pfind/{{ protein.id }}/">{{ protein.ncbi_name }}</a></li>
+        <li>
+        <a href="/pfind/{{ protein.ncbi_name }}/">{{ protein.ncbi_name }}</a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
